<resources>
    <string name="app_name">TapFinder</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="map">Map</string>
    <string name="view_profile">View profile</string>
    <string name="username">Username</string>
    <string name="nearby">Nearby</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Log out</string>
    <string name="my_vicinity">My Vicinity</string>
    <string name="my_profile">My Profile</string>
    <string name="address">Address</string>
    <string name="prompt_phoneNumber">Phone</string>
    <string name="prompt_website">Website</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_sign_up">New to TapFinder? Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="register_header">Join the beer community</string>
    <string name="please_wait">Please wait…</string>
    <string name="error_too_short_password">Password must be at least 6 characters long</string>
    <string name="error_invalid_email">Enter a valid email address</string>
    <string name="error_occurred">An error occurred</string>
    <string name="username_taken">The username is already taken</string>
    <string name="error_email_in_use">The email is already in use</string>
    <string name="favourites">Favourites</string>
    <string name="place_details">Place details</string>
    <string name="add_beer_on_tap">Add beer on tap</string>
    <string name="add_special_offer">Add special offer</string>
    <string name="find_a_beer">Find a beer</string>
    <string name="max_price_description">Wouldn\'t like to pay more than</string>
    <string name="beer_style_description">I\'d like to drink some</string>
    <string name="max_price">Max price</string>
    <string name="leave_comment">Leave a comment</string>
    <string name="search_results">Search results</string>
    <string name="nearby_pubs_serving">Nearby pubs serving %1$s</string>
    <string name="price">Price</string>
    <string name="beer">Beer</string>
    <string name="extra_info">Extra information</string>
    <string name="description">Description</string>
    <string name="error_changing_profile_image">Could not change the profile image</string>
    <string name="profile_image_changed">Profile image has been changed</string>
    <string name="error_beer_already_added">The beer is already added</string>
    <string name="beer_added">Beer has been added</string>
    <string name="title">Title</string>
    <string name="from_date">From</string>
    <string name="to_date">To</string>
    <string name="special_offer_added">Special offer has been added</string>
    <string name="error_end_date_before_start_date">End date cannot be earlier than the start date</string>
    <string name="favourite_places">Favorite places:</string>
    <string name="search">Search</string>
    <string name="beer_details">Beer details</string>
    <string name="available_at">Available at</string>
    <string name="no_results">No results</string>
    <string name="ok" translatable="false">OK</string>
    <string name="empty_string" translatable="false"></string>
    <string name="beers">Beers</string>
    <string name="badges">Badges</string>
    <string name="level">Level %1$d</string>
    <string name="experience">Experience: %1$d</string>
    <string name="places">Places</string>
</resources>
