<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/find_beer_item"
            android:icon="@drawable/ic_beer"
            android:title="@string/find_a_beer" />
        <item
            android:id="@+id/map_item"
            android:icon="@drawable/ic_near_me_grey_800_36dp"
            android:checked="true"
            android:title="@string/nearby" />

        <item
            android:id="@+id/favourites_item"
            android:title="@string/favourites"
            android:icon="@drawable/ic_favorite_grey_800_18dp"/>

        <item
            android:id="@+id/logout_item"
            android:title="@string/logout"
            android:icon="@drawable/ic_exit_to_app_grey_800_24dp"/>
    </group>
</menu>