<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:paddingTop="46dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        style="@style/RegisterEditText">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/register_header"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff"
            android:textSize="30sp" />

        <!--<ImageView android:src="@drawable/logo"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="72dp"-->
            <!--android:layout_marginBottom="24dp"-->
            <!--android:layout_gravity="center_horizontal" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/RegisterEditText">

            <EditText android:id="@+id/input_username"
                android:inputType="textCapWords"
                android:hint="@string/username"
                style="@style/RegisterEditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/RegisterEditText">

            <EditText android:id="@+id/input_email"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                style="@style/RegisterEditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            style="@style/RegisterEditText">

            <EditText android:id="@+id/input_password"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                style="@style/RegisterEditText" />

        </android.support.design.widget.TextInputLayout>

        <Button
            style="?android:textAppearanceButton"
            android:id="@+id/sign_up_button"
            android:background="@color/colorPrimary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:textColor="#ffffff"
            android:text="@string/create_account"/>

    </LinearLayout>
</ScrollView>
