<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:padding="15dp"
                  android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/beer_style_description"
            android:layout_marginBottom="5dp"
            />

        <Spinner
            android:id="@+id/beer_styles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:layout_marginBottom="30dp">
        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/max_price_description"
            android:layout_marginBottom="5dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/max_price"
            android:inputType="numberDecimal"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/find_beer_button"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Search"
            style="@style/Widget.AppCompat.Button.Colored"
            />

    </LinearLayout>

</LinearLayout>