<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <tk.tapfinderapp.util.DelayAutoCompleteTextView
                android:id="@+id/beer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/beer"/>

            <ProgressBar
                android:id="@+id/progress_bar_autocomplete"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="5dp"
                android:visibility="gone"/>

        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/max_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"/>

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/extra_info"
            android:inputType="textMultiLine"
            android:maxLines="4"/>

    </LinearLayout>

</LinearLayout>