<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_vertical|center_horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff"
            android:textSize="40dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal">

        <ScrollView
            android:id="@+id/login_form_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/username_layout"
                        android:layout_width="250dp"
                        android:textColorHint="#ffffff"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal">

                        <AutoCompleteTextView
                            android:id="@+id/login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:fontFamily="sans-serif"
                            android:imeOptions="actionNext"
                            android:textColor="#ffffff"
                            android:textColorHint="#ffffff"
                            android:foreground="#ffffff" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/password_layout"
                        android:layout_width="250dp"
                        android:textColorHint="#ffffff"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:layout_gravity="center_horizontal">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/prompt_password"
                            android:fontFamily="sans-serif"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="#ffffff"
                            android:textColorHint="#ffffff"
                            android:allowUndo="true"
                            android:backgroundTint="#ffffff" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/action_sign_in"
                        android:textColor="#ffffffff"
                        android:fontFamily="sans-serif-light"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal" />

                    <TextView android:id="@+id/sign_up_button"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:gravity="center"
                        android:textColor="#ffffffff"
                        android:text="@string/action_sign_up"
                        android:textSize="16dip"
                        android:layout_marginTop="24dp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>