<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                        xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        card_view:cardUseCompatPadding="true"
                                        card_view:contentPadding="@dimen/cardview_padding">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:card_view="http://schemas.android.com/apk/res-auto"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:paddingLeft="0dp"
                      android:paddingRight="0dp">


            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/map_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"/>

                <TextView
                    android:id="@+id/address_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/details_card_text_margin"
                    android:text="@string/address"
                    android:textSize="@dimen/card_header_text_size"/>

                <TextView
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/address_prompt"
                    android:layout_marginStart="@dimen/details_card_text_margin"
                    android:layout_marginTop="2dp"
                    android:textColor="#202020"
                    android:textSize="@dimen/card_content_text_size"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/phone_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_phone_grey_700_24dp"/>

                <TextView
                    android:id="@+id/phone_number_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/details_card_text_margin"
                    android:text="@string/prompt_phoneNumber"
                    android:textSize="@dimen/card_header_text_size"/>

                <TextView
                    android:id="@+id/phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/phone_number_prompt"
                    android:layout_marginStart="@dimen/details_card_text_margin"
                    android:layout_marginTop="2dp"
                    android:textColor="#202020"
                    android:textSize="@dimen/card_content_text_size"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/website_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_open_in_browser_grey_700_24dp"/>

                <TextView
                    android:id="@+id/website_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/details_card_text_margin"
                    android:text="@string/prompt_website"
                    android:textSize="@dimen/card_header_text_size"/>

                <TextView
                    android:id="@+id/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/website_prompt"
                    android:layout_marginStart="@dimen/details_card_text_margin"
                    android:layout_marginTop="2dp"
                    android:textColor="#202020"
                    android:textSize="@dimen/card_content_text_size"/>

            </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>